Add AuthControllerTest, add Jacoco, Fix errors